<resources>
    <string name="app_name">SyncPeerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="onboarding_presentation_text">Say goodbye to buffering, latency, and bandwidth constraints. \nWith SyncPeer, you are in control of your live streaming experience, empowered by direct peer-to-peer connections.</string>
    <string name="go">Go</string>
    <string name="create_account">Create Account</string>
    <string name="createAccountParagraph">Seamless account creation: \n Quick and hassle-free signup process awaits you</string>
    <string name="connect">Connect</string>
    <string name="connectParagraphText">Connect instantly: \nEmpower smooth peer-to-peer communication effortlessly.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saveForLaterParagraph">Save for later</string>
    <string name="capture_and_store_streams_for_future_viewing">Capture and store streams for future viewing.</string>
    <string name="preLoginTextTitle">Sync with Peers:\nSeamless and Reliable</string>
    <string name="preLoginParagraphText">Let\'s ride the wave of live streaming together!\nConnect or register to get started!</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="your_password">Your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tc">Do you agree with our Terms and Conditions?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="welcome_back_n_you_have_been_missed">Welcome Back,\nYou have been missed!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="wrong_email_or_password">E-mail or password is wrong!</string>
    <string name="error_the_e_mail_is_already_registered">Error: The e-mail is already registered!</string>
    <string name="there_is_a_network_error_please_check_your_connection_and_try_again">There is a network error! Please check your connection and try again!</string>
    <string name="passwords_don_t_match">Passwords don\'t match!</string>
    <string name="the_e_mail_address_is_not_valid">The e-mail address is not valid!</string>
    <string name="passwords_should_match_and_have_at_least_10_characters">Passwords should match and have at least 10 characters!</string>
    <string name="title_activity_set_profile">SetProfileActivity</string>
    <string name="title_activity_main21">MainActivity21</string>
</resources>