<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModelLogin"
            type="com.syncpeer.syncpeerapp.auth.viewmodels.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginActivity">

        <TextView
            android:id="@+id/createAccountTitle"
            style="@style/BigWelcomeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="left"
            android:text="@string/welcome_back_n_you_have_been_missed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <EditText
            android:id="@+id/loginEmailAddress"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:text="@={viewModelLogin.emailEditText}"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/createAccountTitle"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTitle"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/round_rectangle"
            android:text="@={viewModelLogin.passwordEditText}"
            style="@style/OnboardingParagraphText"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/loginEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailAddress"
            app:layout_constraintVertical_bias="0.0" />


        <Button
            android:id="@+id/loginActionButton"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:backgroundTint="@color/light_blue"
            android:textColor="@color/white"
            android:text="@string/connect"
            android:onClick="@{()->viewModelLogin.login()}"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.073" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/forgot_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>