<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModelRegister"
            type="com.syncpeer.syncpeerapp.auth.viewmodels.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.RegisterActivity">

        <TextView
            android:id="@+id/createAccountTitleRegister"
            style="@style/BigWelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:gravity="center"
            android:text="@string/create_your_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <EditText
            android:id="@+id/registerEmailAddress"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModelRegister.emailEditText}"
            app:error="@{viewModelRegister.emailError}"
            android:focusable="auto"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/lastNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/registerPasswordEditText"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:hint="@string/your_password"
            android:text="@={viewModelRegister.passwordEditText}"
            app:error="@{viewModelRegister.passwordError}"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registerEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/registerEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/registerEmailAddress"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/confirmPasswordRegisterEditText"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:text="@={viewModelRegister.confirmPasswordEditText}"
            app:error="@{viewModelRegister.passwordError}"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/registerPasswordEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/registerPasswordEditText"
            app:layout_constraintTop_toBottomOf="@+id/registerPasswordEditText"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/termsAndConditionsTextBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModelRegister.hasAcceptedTOS}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegisterEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordRegisterEditText"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterEditText"
            app:layout_constraintVertical_bias="0.064" />

        <TextView
            android:id="@+id/termsAndConditionsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tc"
            app:layout_constraintBottom_toBottomOf="@+id/termsAndConditionsTextBox"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordRegisterEditText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/termsAndConditionsTextBox"
            app:layout_constraintTop_toTopOf="@+id/termsAndConditionsTextBox"
            app:layout_constraintVertical_bias="0.517" />

        <Button
            android:id="@+id/registerActionButton"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:backgroundTint="@color/light_blue"
            android:text="@string/register"
            android:onClick="@{()->viewModelRegister.register()}"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/termsAndConditionsTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/termsAndConditionsTextBox"
            app:layout_constraintTop_toBottomOf="@+id/termsAndConditionsTextView"
            app:layout_constraintVertical_bias="0.252" />

        <EditText
            android:id="@+id/lastNameEditText"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModelRegister.lastNameEditText}"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/firstNameEditText"
            style="@style/OnboardingParagraphText"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_rectangle"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@={viewModelRegister.firstNameEditText}"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/createAccountTitleRegister"
            app:layout_constraintTop_toBottomOf="@+id/createAccountTitleRegister"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>